@@ -1,3 +1,7 @@
+2006-07-19  Alex Roitman  <shura@gramps-project.org>
+	* src/plugins/GraphViz.py (GraphViz.__init__): Take care of the
+	encoding errors.
+	
 2006-07-19  Zsolt Foldvari  <zsolt.foldvari@nokia.com>
 	* src/GrampsCfg.py: UI improvements.
 	* src/Config/_GrampsIniKeys.py: Proper key retrieval.
